new files added

--- a/API/.htaccess
+++ b/API/.htaccess
@@ -2,5 +2,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /Backend/index.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$http://localhost/Backend/API/index.php/?url=$1 [QSA,L]
 </IfModule>
