--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/netinfo": "^6.0.4",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~42.0.1",
     "expo-linear-gradient": "~9.2.0",
@@ -20,8 +24,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-form-validator": "^0.5.1",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.9.2",
+    "react-native-reanimated": "^2.2.4",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
