--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/netinfo": "^6.0.4",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~42.0.1",
+    "expo-image-picker": "^11.0.3",
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "qs": "^6.10.1",
