--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~42.0.1",
+    "expo-file-system": "~11.1.3",
     "expo-image-picker": "^11.0.3",
     "expo-linear-gradient": "~9.2.0",
+    "expo-media-library": "^13.0.3",
+    "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.0.4",
     "qs": "^6.10.1",
     "react": "16.13.1",
@@ -27,6 +30,7 @@
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-form-validator": "^0.5.1",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.4",
