--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-media-library": "^13.0.3",
     "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.0.4",
+    "jwt-decode": "^3.1.2",
     "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
